--- a/app/src/main/res/layout/fragment_error.xml
+++ b/app/src/main/res/layout/fragment_error.xml
@@ -21,10 +21,20 @@
         android:textStyle="bold" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/errorMessageTextView"
+        android:id="@+id/errorMessageTextView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="25sp" />
 
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/buttonRetryInternetCheck"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="50dp"
+        android:background="@drawable/button_shape"
+        android:text="@string/retry"
+        android:onClick="onClickListener"
+        android:textAllCaps="true" />
 </LinearLayout>
