--- a/app/src/main/res/layout/fragment_team_info.xml
+++ b/app/src/main/res/layout/fragment_team_info.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="team"
             type="com.example.footballapp.model.Datum" />
@@ -19,25 +20,27 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="#2033A6"
-        tools:context=".teamInfo.TeamInfoFragment">
+        tools:context=".teamInfo.TeamInfoFragment"
+        >
 
 
         <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:padding="40dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:cardCornerRadius="50dp"
-            tools:cardElevation="60dp"
-            tools:cardUseCompatPadding="true">
+            tools:cardCornerRadius="100dp"
+            tools:cardElevation="50dp"
+            tools:cardUseCompatPadding="true"
+            >
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -95,6 +98,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
+                    android:layout_marginBottom="30dp"
                     android:text="@{country.name}"
                     android:textSize="20sp"
                     android:textStyle="italic" />
