--- a/app/src/main/res/layout/team_item.xml
+++ b/app/src/main/res/layout/team_item.xml
@@ -24,15 +24,17 @@
         tools:cardCornerRadius="20dp"
         tools:cardElevation="10dp"
         tools:cardUseCompatPadding="true">
+
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@drawable/silver_card_back"/>
+            android:background="@drawable/silver_card_back" />
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:orientation="vertical"
             android:padding="8dp">
 
             <ImageView
@@ -40,18 +42,16 @@
                 profileImage="@{imageUrl}"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
                 android:padding="4dp" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/teamNameTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/logoImageView"
-                android:layout_centerHorizontal="true"
                 android:layout_marginStart="7dp"
+                android:gravity="center_horizontal"
                 android:text="@{team.name}"
-                android:layout_centerVertical="true"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -59,13 +59,12 @@
                 android:id="@+id/countryTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/teamNameTextView"
-                android:layout_centerHorizontal="true"
                 android:layout_marginStart="7dp"
+                android:gravity="center_horizontal"
                 android:text="@{country.name}"
                 android:textSize="15sp"
                 android:textStyle="italic" />
 
-        </RelativeLayout>
+        </LinearLayout>
     </androidx.cardview.widget.CardView>
 </layout>
